ghc/tests/typecheck/should_fail/tcfail090.hs
{-# OPTIONS -fglasgow-exts #-}

module ShouldFail where

import PrelGHC

die :: Int -> ByteArray#
die _ = undefined
